gcc/testsuite/rust/rustc/ui/parser/pat-ranges-1.rs
// Parsing of range patterns

fn main() {
    let macropus!() ..= 11 = 12; // { dg-error "" "" { target *-*-* } }
}

